fix: 프로젝트 목록에 이미지 반환 (#152)